--- a/src/main/resources/lang/morefeatures/en_US.lang
+++ b/src/main/resources/lang/morefeatures/en_US.lang
@@ -125,6 +125,20 @@ item.morefeatures.crown.dandeline.name=Dandelion Crown
 item.morefeatures.crown.dandeline.desc=Flower crown made with dandelions
 item.morefeatures.crown.rose.name=Rose Crown
 item.morefeatures.crown.rose.desc=Flower crown made with roses
+item.morefeatures.crown.orange.name=Marigold Crown
+item.morefeatures.crown.orange.desc=Flower crown made with marigolds
+item.morefeatures.crown.lightblue.name=Bluebell Crown
+item.morefeatures.crown.lightblue.desc=Flower crown made with bluebells
+item.morefeatures.crown.purple.name=Heather Crown
+item.morefeatures.crown.purple.desc=Flower crown made with heathers
+item.morefeatures.crown.pink.name=Orchid Crown
+item.morefeatures.crown.pink.desc=Flower crown made with orchids
+item.morefeatures.crown.cyan.name=Pansy Crown
+item.morefeatures.crown.cyan.desc=Flower crown made with pansies
+item.morefeatures.crown.lightgray.name=White Dandelion Crown
+item.morefeatures.crown.lightgray.desc=Flower crown made with white dandelions
+item.morefeatures.crown.magenta.name=Hyacinth Crown
+item.morefeatures.crown.magenta.desc=Flower crown made with hyacinth
 item.morefeatures.crown.cherry.name=Cherry Crown
 item.morefeatures.crown.cherry.desc=Flower crown made with cherry flowers
 item.morefeatures.crown.deadbush.name=Dead Bush Crown
